--- a/instances_deployment.yml
+++ b/instances_deployment.yml
@@ -11,19 +11,8 @@ Resources:
       SecurityGroupIds:
         - !Ref WebAppSecurityGroup
       "Tags" : [
-            {"Key" : "Name", "Value" : "front-end-app"}]
+            {"Key" : "Name", "Value" : "frontend-application"}]
   
-  backendAppInstance:
-    Type: AWS::EC2::Instance
-    Properties:
-      ImageId: ami-0d5eff06f840b45e9 # ImageID valid only in us-east-1 region
-      InstanceType: t2.micro
-      KeyName: joebbrian-account # <-- Change to use your key-pair name
-      SecurityGroupIds:
-        - !Ref WebAppSecurityGroup
-      "Tags" : [
-            {"Key" : "Name", "Value" : "backend-app"}]
-
   WebAppSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
